# sim

./: .gitignore  .gitmodules  README.md
sim/: CMakeLists.txt  cflags.sh  format.sh  libs.sh  main.c  main.c~  raylib-main.c  system.c  system.c~  system.h  system.h~  termin.c  termin.c~  termin.h  termin.h~  types.h  types.h~
